# emita.io

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_create_users_table.py
app/: main.py
app/auth/: dependencies.py  router.py  security.py
app/core/: config.py
app/models/: __init__.py  base.py  user.py
app/schemas/: auth.py
app/users/: router.py
docs/: prd-invoicekit-mvp.md  tasks.md
